2008-04-14  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #270406

	* em-folder-properties.c: (struct _prop_data), (emfp_free),
	(add_numbered_row), (emfp_get_folder_item),
	(emfp_dialog_got_folder_quota), (emfp_dialog_got_folder):
	Retrieve quota information for a folder and show it in a dialog.
	* mail-ops.h: (mail_get_folder_quota):
	* mail-ops.c: (struct _get_quota_msg), (get_quota_desc),
	(get_quota_exec), (get_quota_done), (get_quota_free),
	(MailMsgInfo get_quota_info), (mail_get_folder_quota):
	New operation to get folder's quota information.

2008-04-13  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-browser.c:
	Add an icon for Folder->New.

2008-04-10  Matthew Barnes  <mbarnes@redhat.com>

	* mail-config.glade:
	Revert my previous change.  Glade was more destructive toward the
	file than I realized.  But I think I fixed the core issue that was
	causing Glade 3 to crash: there were two widgets named "omenuCharset".
	Now the one in Composer Preferences is named "omenuCharset1".

2008-04-10  Sankar P  <psankar@novell.com>

	* em-composer-prefs.c: (em_composer_prefs_construct):
	Change the name of the variable we look for in 
	the glade file.

	Also add some if conditions to avoid certain crash.

	** See bug #527327

2008-04-09  Matthew Barnes  <mbarnes@redhat.com>

	* mail-config.glade:
	Loaded this file into Glade 3.5 and saved it.  Doing so appears
	to have fixed whatever corruption was causing previous Glade 3
	releases to choke on it.

2008-04-08  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #523413

	* em-composer-utils.c (save_draft_done):
	Check the composer window's visibility to determine whether to
	destroy the window.  See the corresponding composer/ChangeLog
	entry to get the full story.

	* em-composer-utils.c (em_utils_composer_save_draft_cb):
	Remove the 'quit' parameter.

2008-04-07  Takao Fujiwara  <takao.fujiwara@sun.com>

	reviewed by: Milan Crha

	** Fix for bug #408579

	* mail.error.xml: